--- a/obo-stadium/template/common.pug
+++ b/obo-stadium/template/common.pug
@@ -21,6 +21,9 @@ html(lang="en")
     // Login Modal
     link(rel="stylesheet" type="text/css" href="./css/components/login-modal.css")
 
+    // Useed in Js
+    link(rel="stylesheet" type="text/css" href="./css/used-in-js.css")
+
     block customizeCss
     
     block title
