--- a/obo-stadium/template/index.pug
+++ b/obo-stadium/template/index.pug
@@ -233,11 +233,65 @@ block mainContent
     .carousel
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-1-thumnails.jpg' alt='news-1')
           .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
+            h5.card-title Pack “Logo Sketch” với branding mộc mạc trên Air Max 97 và Air Max Plus
+            p.card-text.news-short-desc Cùng đến với mẫu branding kiểu phác thảo, đầy mộc mạc và “blend" hoàn hảo cùng tổng thể phối màu.
+            p.card-text.author
+              | By 
+              span.name Cody
+              |  &middot; 27/08/2019
+        .shadow.mx-auto.position-absolute
+      .news.position-relative
+        .card
+          img.card-img-top(src='./image/news/news-2-thumnails.jpg' alt='news-1')
+          .card-body
+            h5.card-title Nike Classic Cortez – Phối Màu Của Sự Tinh Tế
+            p.card-text.news-short-desc Bộ sưu tập Nike Classic Cortez với sự kết hợp của 2 tông màu: Hồng Hoa Đăng và màu Cam
+            p.card-text.author
+              | By 
+              span.name Cody
+              |  &middot; 21/08/2019
+        .shadow.mx-auto.position-absolute
+      .news.position-relative
+        .card
+          img.card-img-top(src='./image/news/news-3-thumnails.jpg' alt='news-3')
+          .card-body
+            h5.card-title Air Jordan 1 “Satin Black Toe” xuất hiện hình ảnh chi tiết
+            p.card-text.news-short-desc Air Jordan 1 “Black Toe” luôn là thiết kế đáng mua nhất, lại còn là satin nữa chứ?
+            p.card-text.author
+              | By 
+              span.name Cody
+              |  &middot; 18/08/2019
+        .shadow.mx-auto.position-absolute
+      .news.position-relative
+        .card
+          img.card-img-top(src='./image/news/news-4-thumnails.jpg' alt='news-4')
+          .card-body
+            h5.card-title HOT! Nike và Levi’s tái hợp với hàng loạt siêu phẩm mới
+            p.card-text.news-short-desc Đến hẹn lại lên, Nike và Levi’s lại tái hợp với nhau khiến các tín đồ thời trang mê mệt.
+            p.card-text.author
+              | By 
+              span.name Cody
+              |  &middot; 15/08/2019
+        .shadow.mx-auto.position-absolute
+      .news.position-relative
+        .card
+          img.card-img-top(src='./image/news/news-6-thumnails.jpg' alt='news-6')
+          .card-body
+            h5.card-title Nike tung ảnh chính thức phối màu Supreme x SB Dunk Low “Metallic Silver”
+            p.card-text.news-short-desc Mùa thu năm nay, lần collab thứ 3 của Supreme cùng dòng SB Dunk Low của Nike sẽ ra mắt.
+            p.card-text.author
+              | By 
+              span.name Cody
+              |  &middot; 11/08/2019
+        .shadow.mx-auto.position-absolute
+      .news.position-relative
+        .card
+          img.card-img-top(src='./image/news/news-5-thumnails.jpg' alt='news-5')
+          .card-body
+            h5.card-title Xuất hiện phối màu thứ 3 của Nike Air Force 1 Type N354
+            p.card-text.news-short-desc Nike N354 là tên dự án với những thiết kế lấy cảm hứng từ kho Archive khổng lồ của The Swoosh.
             p.card-text.author
               | By 
               span.name Cody
@@ -245,71 +299,10 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-2.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-7-thumnails.jpg' alt='news-7')
           .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
-            p.card-text.author
-              | By 
-              span.name Cody
-              |  &middot; 27/07/2019
-        .shadow.mx-auto.position-absolute
-      .news.position-relative
-        .card
-          img.card-img-top(src='./image/news/news-3.jpg' alt='news-1')
-          .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
-            p.card-text.author
-              | By 
-              span.name Cody
-              |  &middot; 27/07/2019
-        .shadow.mx-auto.position-absolute
-      .news.position-relative
-        .card
-          img.card-img-top(src='./image/news/news-4.png' alt='news-1')
-          .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
-            p.card-text.author
-              | By 
-              span.name Cody
-              |  &middot; 27/07/2019
-        .shadow.mx-auto.position-absolute
-      .news.position-relative
-        .card
-          img.card-img-top(src='./image/news/news-5.jpg' alt='news-1')
-          .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
-            p.card-text.author
-              | By 
-              span.name Cody
-              |  &middot; 27/07/2019
-        .shadow.mx-auto.position-absolute
-      .news.position-relative
-        .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
-          .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
-            p.card-text.author
-              | By 
-              span.name Cody
-              |  &middot; 27/07/2019
-        .shadow.mx-auto.position-absolute
-      .news.position-relative
-        .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
-          .card-body
-            h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
-            p.card-text.news-short-desc
-              | Jordan Brand m&#x1EDB;i &dstrok;&acirc;y &dstrok;&atilde; tung ra m&#x1ED9;t b&#x1ED9; s&#x1B0;u t&#x1EAD;p &dstrok;&#x1EB7;c bi&#x1EC7;t v&#x1EDB;i
+            h5.card-title Red Wing kết hợp cùng New Balance chế tác mẫu 997 đầy tinh xảo
+            p.card-text.news-short-desc Trong lần collab này, Red Wing và New Balance sẽ mang đến dòng sneaker 997.
             p.card-text.author
               | By 
               span.name Cody
