--- a/obo-stadium/template/template-parts/header.pug
+++ b/obo-stadium/template/template-parts/header.pug
@@ -11,8 +11,8 @@ header.container-fluid
     #navbarNav.collapse.navbar-collapse.justify-content-md-end.text-center
       ul.navbar-nav
         li.nav-item
-          a.nav-link(href='./shop.html') Sản phẩm
+          a.nav-link#shop(href='./shop.html') Sản phẩm
         li.nav-item
-          a.nav-link(href='./news.html') Tin tức
+          a.nav-link#news(href='./news.html') Tin tức
         li.nav-item
-          a.nav-link.account-setting(href='' data-toggle="modal" data-target="#signInSignUp")
+          a.nav-link.account-setting#account(href='' data-toggle="modal" data-target="#signInSignUp")
