--- a/obo-stadium/sass/components/shop/product-showing.scss
+++ b/obo-stadium/sass/components/shop/product-showing.scss
@@ -90,6 +90,30 @@
     font-size: $fourteen-pixel;
 }
 
+// Pagination Override
+
+.paginate-pagination {
+    @include flex-center-center;
+    margin-top: $twenty-pixel;
+
+    & ul {
+        & li {
+            & a.page {
+                height: $forty-pixel;
+                width: $forty-pixel;
+                line-height: $forty-pixel;
+
+            }
+
+            & a.page.active {
+                pointer-events: none;
+                color: $main-color;
+                opacity: 1;
+            }
+        }
+    }
+}
+
 @media (max-width: $max-width-container) {
     .product-row {
         display: grid;
