update sort data

--- a/obo-stadium/css/components/shop/filter-bar.css
+++ b/obo-stadium/css/components/shop/filter-bar.css
@@ -47,6 +47,9 @@
 .btn-primary.clear-filter:active {
   background-color: #333333 !important;
 }
+.btn-primary.clear-filter:disabled {
+  cursor: not-allowed;
+}
 
 .break-line {
   width: 100%;
