--- a/obo-stadium/sass/components/shop/product-showing.scss
+++ b/obo-stadium/sass/components/shop/product-showing.scss
@@ -43,6 +43,7 @@
         &.active {
             background-color: $hover-main-color;
             color: white;
+            pointer-events: none;
         }
     }
 }
