--- a/obo-stadium/template/template-parts/sort-dropdown.pug
+++ b/obo-stadium/template/template-parts/sort-dropdown.pug
@@ -1,7 +1,5 @@
 .sort-dropdown
-  .sort-item Hàng mới về
-  .sort-item.active Bán chạy
-  .sort-item Giá thấp đến cao
-  .sort-item Giá cao đến thấp
-  .sort-item a-z
-  .sort-item z-a
+  .sort-item.new-arrival.active Hàng mới
+  .sort-item.best-seller Bán chạy
+  .sort-item.low-to-high-price Giá thấp đến cao
+  .sort-item.high-to-low-price Giá cao đến thấp
