--- a/obo-stadium/template/template-parts/filter-modal.pug
+++ b/obo-stadium/template/template-parts/filter-modal.pug
@@ -16,61 +16,47 @@
             .select-filter.collapse.show(id="brand-collapse")
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='nike' id='nike /')
+                  input.filter-checkbox(type='checkbox' name='nike' id='nike')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='nike') Nike
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan /')
+                  input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='air-jordan') Air Jordan
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='adidas' id='adidas /')
+                  input.filter-checkbox(type='checkbox' name='adidas' id='adidas')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='adidas') Adidas
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='supreme' id='supreme /')
+                  input.filter-checkbox(type='checkbox' name='converse' id='converse')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                    label.checkbox-label(for='supreme') Supreme
+                    label.checkbox-label(for='converse') Converse
               #see-more-dropdown
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='nike' id='nike /')
+                    input.filter-checkbox(type='checkbox' name='asics' id='asics')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                      label.checkbox-label(for='nike') Nike
+                      label.checkbox-label(for='asics') Asics
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan /')
+                    input.filter-checkbox(type='checkbox' name='vans' id='vans')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                      label.checkbox-label(for='air-jordan') Air Jordan
-                .item
-                  .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='adidas' id='adidas /')
-                    .state.p-success
-                      svg.svg.svg-icon(viewbox='0 0 20 20')
-                        path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                      label.checkbox-label(for='adidas') Adidas
-                .item
-                  .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='supreme' id='supreme /')
-                    .state.p-success
-                      svg.svg.svg-icon(viewbox='0 0 20 20')
-                        path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                      label.checkbox-label(for='supreme') Supreme
+                      label.checkbox-label(for='vans') Vans
               .see-more#see-more-brand
                 | Xem th&ecirc;m
           .break-line
@@ -82,28 +68,28 @@
             .select-filter.collapse.show(id="categories-collapse")
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='male' id='male /')
+                  input.filter-checkbox(type='checkbox' name='male' id='male')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='male') Nam
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='female' id='female /')
+                  input.filter-checkbox(type='checkbox' name='female' id='female')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='female') N&#x1EEF;
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='youth' id='youth /')
+                  input.filter-checkbox(type='checkbox' name='youth' id='youth')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='youth') Thi&#x1EBF;u ni&ecirc;n
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='toddler' id='toddler /')
+                  input.filter-checkbox(type='checkbox' name='toddler' id='toddler')
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -132,14 +118,14 @@
               .date-row
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='under-2010' id='under-2010 /')
+                    input.filter-checkbox(type='checkbox' name='under-2010' id='under-2010')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                       label.checkbox-label(for='under-2010') < 2010
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2011' id='2011 /')
+                    input.filter-checkbox(type='checkbox' name='2011' id='2011')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -147,14 +133,14 @@
               .date-row
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2012' id='2012 /')
+                    input.filter-checkbox(type='checkbox' name='2012' id='2012')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                       label.checkbox-label(for='2012') 2012
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2013' id='2013 /')
+                    input.filter-checkbox(type='checkbox' name='2013' id='2013')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -162,14 +148,14 @@
               .date-row
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2014' id='2014 /')
+                    input.filter-checkbox(type='checkbox' name='2014' id='2014')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                       label.checkbox-label(for='2014') 2014
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2015' id='2015 /')
+                    input.filter-checkbox(type='checkbox' name='2015' id='2015')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -177,14 +163,14 @@
               .date-row
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2016' id='2016 /')
+                    input.filter-checkbox(type='checkbox' name='2016' id='2016')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                       label.checkbox-label(for='2016') 2016
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2017' id='2017 /')
+                    input.filter-checkbox(type='checkbox' name='2017' id='2017')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -192,14 +178,14 @@
               .date-row
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2018' id='2018 /')
+                    input.filter-checkbox(type='checkbox' name='2018' id='2018')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                       label.checkbox-label(for='2018') 2018
                 .item
                   .pretty.p-svg.p-curve
-                    input.filter-checkbox(type='checkbox' name='2019' id='2019 /')
+                    input.filter-checkbox(type='checkbox' name='2019' id='2019')
                     .state.p-success
                       svg.svg.svg-icon(viewbox='0 0 20 20')
                         path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
