--- a/obo-stadium/template/buy-page.pug
+++ b/obo-stadium/template/buy-page.pug
@@ -65,7 +65,7 @@ block mainContent
               span.size-details 8US | 41VN | 25.4CM
               i.fas.fa-chevron-down.dropdown-arrow
           .bid-buy-btn
-            include ./template-parts/price-counting
+            include ./template-parts/buy-price-counting
         // Payment Methods Section
         .payment-methods.childs
           .title
@@ -107,6 +107,6 @@ block customizeScript
   script(src="./script/except-home-page.js")
   script(src="./script/size-render.js")
   script(src="./script/size-choose.js")
-  script(src="./script/buy-sell-page.js")
+  script(src="./script/buy-page.js")
   script(src="./script/address-select.js")
   script(src="./script/payment-methods.js")
