--- a/obo-stadium/template/shop.pug
+++ b/obo-stadium/template/shop.pug
@@ -133,8 +133,8 @@ block mainContent
           .title
             .text
               | Kho&#x1EA3;ng gi&aacute;
-          input.form-control.price-input(type='text' placeholder='Từ' onkeypress='return priceInputValidate(event)')
-          input.form-control.price-input(type='text' placeholder='Đến' pattern='[0-9]' onkeypress='return priceInputValidate(event)')
+          input.form-control.price-input#from-price(type='text' placeholder='Từ' onkeypress='return priceInputValidate(event)')
+          input.form-control.price-input#to-price(type='text' placeholder='Đến' pattern='[0-9]' onkeypress='return priceInputValidate(event)')
           button.btn.btn-primary.apply-price.red-btn
             | &aacute;p d&#x1EE5;ng
         .break-line
