--- a/obo-stadium/template/template-parts/buy-price-counting.pug
+++ b/obo-stadium/template/template-parts/buy-price-counting.pug
@@ -1,9 +1,9 @@
-ul#myTab.nav.nav-tabs(role='tablist')
+ul#buyTab.nav.nav-tabs(role='tablist')
   li.nav-item
     button.bid-btn.btn.btn-primary.green-btn#bid.nav-link.active(data-toggle='tab', href='#home', role='tab', aria-controls='home', aria-selected='true') Đặt giá mua
   li.nav-item
     button.buy-btn.btn.btn-primary.trans-btn#buy-now.nav-link(data-toggle='tab', href='#profile', role='tab', aria-controls='profile', aria-selected='false') Mua ngay
-#myTabContent.tab-content
+#buyTabContent.tab-content
   form#home.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='bid')
     input.price-input.form-control(type='text' placeholder='Đặt giá mua ...' onkeypress="return priceInputValidate(event)" maxlength="10")
     .invalid-feedback 
