--- a/obo-stadium/template/common.pug
+++ b/obo-stadium/template/common.pug
@@ -40,7 +40,7 @@ html(lang="en")
     block footer
 
     script(type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js")
-    script(type="text/javascript" src="./vendor/bootstrap/js/bootstrap.min.js")
+    script(type="text/javascript" src="./vendor/bootstrap/js/bootstrap.bundle.min.js")
 
     // Main Js
     script(type="text/javascript" src="./script/main.js")
