--- a/obo-stadium/sass/used-in-js.scss
+++ b/obo-stadium/sass/used-in-js.scss
@@ -9,3 +9,28 @@
 .active-nav {
     border-bottom: 3px solid white !important;
 }
+
+.cross {
+    position: relative;
+    background-color: #fff;
+    color: $text-dark;
+    pointer-events: none;
+    
+    &:after,
+    &:before {
+        position: absolute;
+        content: ' ';
+        height: 100%;
+        width: 2px;
+        background-color: $lighter-grey-color;
+        opacity: 1;
+    }
+
+    &:after {
+        transform: rotate(-45deg);
+    }
+
+    &:before {
+        transform: rotate(45deg);
+    }
+}
